--- a/styles/main.css
+++ b/styles/main.css
@@ -42,7 +42,7 @@ main {
 	background-size: cover;
 	background-position: center;
 	display: flex;
-	flex-wrap: nowrap; /* ❗ не оборачивать */
+	flex-wrap: nowrap;
 	gap: 2vw;
 }
 
@@ -52,7 +52,8 @@ section {
 }
 
 section h2 {
-	margin-bottom: 2vw;
+	margin-bottom: 3vh;
+	margin-top: 5vh;
 	font-size: 1.7vw;
 }
 
@@ -65,20 +66,20 @@ section h2 {
 .product-card {
 	display: flex;
 	flex-direction: column;
+	justify-content: space-between;
 	background-color: rgba(255, 255, 255, 0.05);
 	border-radius: 1vw;
 	overflow: hidden;
 	width: 100%;
-	height: max-content;
+	height: 53vh;
 	backdrop-filter: blur(20px);
-	box-shadow: 0 0 2vw rgba(0, 0, 0, 0.6);
 	scroll-snap-align: start;
 	transition: transform 0.3s ease, box-shadow 0.3s ease;
 }
 
 .product-card__image {
 	width: 100%;
-	height: 15vw;
+	height: 60%;
 	overflow: hidden;
 }
 
@@ -150,24 +151,31 @@ aside h2 {
 
 .cart-item {
 	display: flex;
+	flex-direction: column;
 	justify-content: space-between;
-	align-items: center;
 	background-color: rgba(255, 255, 255, 0.08);
 	border-radius: 0.7vw;
 	padding: 1vw 1.5vw;
-	box-shadow: 0 0 1vw rgba(0, 0, 0, 0.3);
+}
+
+.cart-item div {
+	display: flex;
+	margin-bottom: 0.5vw;
 }
 
 .cart-item__title {
 	font-size: 1.2vw;
 	color: #fff;
 	font-weight: 500;
+	flex: 2;
 }
 
 .cart-item__controls {
 	display: flex;
 	align-items: center;
 	gap: 0.8vw;
+	flex: 1;
+	justify-content: center;
 }
 
 .cart-item__button {
@@ -193,6 +201,16 @@ aside h2 {
 	color: #fff;
 	font-size: 1.2vw;
 	font-weight: 600;
+	min-width: 20px;
+	text-align: center;
+}
+
+.cart-item__total {
+	flex: 1;
+	font-size: 1.2vw;
+	font-weight: 600;
+	text-align: right;
+	color: #fff;
 }
 
 #cart-container {
@@ -252,7 +270,6 @@ section {
 	overflow-y: scroll;
 	height: 53vh;
 	scrollbar-width: none;
-	/* остальное оставляем */
 	scroll-snap-type: y mandatory;
 }
 
